--- a/template.html
+++ b/template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
+	<meta charset="utf-8">
 	<title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <script>
